Fixed Title Spacing and Name

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,4 +1,5 @@
 .prescription-web-title{
     font-size: 2rem;
     font-weight: bold;
+    padding: 2rem;
 }
